ABAPCDSParser.ts
// Generated from ./ABAPCDS.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { ABAPCDSListener } from "./ABAPCDSListener";
import { ABAPCDSVisitor } from "./ABAPCDSVisitor";


export class ABAPCDSParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly T__48 = 49;
	public static readonly T__49 = 50;
	public static readonly T__50 = 51;
	public static readonly T__51 = 52;
	public static readonly T__52 = 53;
	public static readonly T__53 = 54;
	public static readonly T__54 = 55;
	public static readonly T__55 = 56;
	public static readonly T__56 = 57;
	public static readonly T__57 = 58;
	public static readonly T__58 = 59;
	public static readonly T__59 = 60;
	public static readonly T__60 = 61;
	public static readonly T__61 = 62;
	public static readonly T__62 = 63;
	public static readonly T__63 = 64;
	public static readonly T__64 = 65;
	public static readonly T__65 = 66;
	public static readonly T__66 = 67;
	public static readonly T__67 = 68;
	public static readonly T__68 = 69;
	public static readonly T__69 = 70;
	public static readonly T__70 = 71;
	public static readonly T__71 = 72;
	public static readonly T__72 = 73;
	public static readonly T__73 = 74;
	public static readonly T__74 = 75;
	public static readonly T__75 = 76;
	public static readonly T__76 = 77;
	public static readonly T__77 = 78;
	public static readonly T__78 = 79;
	public static readonly T__79 = 80;
	public static readonly T__80 = 81;
	public static readonly T__81 = 82;
	public static readonly T__82 = 83;
	public static readonly T__83 = 84;
	public static readonly T__84 = 85;
	public static readonly T__85 = 86;
	public static readonly T__86 = 87;
	public static readonly T__87 = 88;
	public static readonly T__88 = 89;
	public static readonly T__89 = 90;
	public static readonly T__90 = 91;
	public static readonly T__91 = 92;
	public static readonly T__92 = 93;
	public static readonly T__93 = 94;
	public static readonly T__94 = 95;
	public static readonly T__95 = 96;
	public static readonly T__96 = 97;
	public static readonly T__97 = 98;
	public static readonly T__98 = 99;
	public static readonly T__99 = 100;
	public static readonly T__100 = 101;
	public static readonly T__101 = 102;
	public static readonly T__102 = 103;
	public static readonly T__103 = 104;
	public static readonly T__104 = 105;
	public static readonly T__105 = 106;
	public static readonly T__106 = 107;
	public static readonly WS = 108;
	public static readonly DEFINE = 109;
	public static readonly VIEW = 110;
	public static readonly AS = 111;
	public static readonly SELECT = 112;
	public static readonly FROM = 113;
	public static readonly WHERE = 114;
	public static readonly GROUPBY = 115;
	public static readonly HAVING = 116;
	public static readonly UNION = 117;
	public static readonly ALL = 118;
	public static readonly BOOLEANLITERAL = 119;
	public static readonly KEY = 120;
	public static readonly CASE = 121;
	public static readonly WHEN = 122;
	public static readonly THEN = 123;
	public static readonly ELSE = 124;
	public static readonly END = 125;
	public static readonly CAST = 126;
	public static readonly PRESERVING = 127;
	public static readonly TYPE = 128;
	public static readonly DISTINCT = 129;
	public static readonly TO = 130;
	public static readonly WITH = 131;
	public static readonly PARAMETERS = 132;
	public static readonly DEFAULT = 133;
	public static readonly FILTER = 134;
	public static readonly ASSOCIATION = 135;
	public static readonly ON = 136;
	public static readonly NOT = 137;
	public static readonly AND = 138;
	public static readonly OR = 139;
	public static readonly BETWEEN = 140;
	public static readonly LIKE = 141;
	public static readonly ESCAPE = 142;
	public static readonly IS = 143;
	public static readonly NULL = 144;
	public static readonly INNER = 145;
	public static readonly JOIN = 146;
	public static readonly OUTER = 147;
	public static readonly LEFT = 148;
	public static readonly RIGHT = 149;
	public static readonly ONE = 150;
	public static readonly MANY = 151;
	public static readonly CROSS = 152;
	public static readonly SINGLELINECOMMENT = 153;
	public static readonly MULTILINECOMMENT = 154;
	public static readonly NUMBER = 155;
	public static readonly LEN = 156;
	public static readonly DEC = 157;
	public static readonly IDENTIFIER = 158;
	public static readonly ANNOTATIONKEY = 159;
	public static readonly ENUM = 160;
	public static readonly ANNOTATIONSEPERATOR = 161;
	public static readonly STRING = 162;
	public static readonly RULE_statement = 0;
	public static readonly RULE_alias = 1;
	public static readonly RULE_join = 2;
	public static readonly RULE_parameter_actual = 3;
	public static readonly RULE_data_source_parameters = 4;
	public static readonly RULE_data_source = 5;
	public static readonly RULE_target = 6;
	public static readonly RULE_associated_view = 7;
	public static readonly RULE_rel_opr = 8;
	public static readonly RULE_projection = 9;
	public static readonly RULE_rel_side = 10;
	public static readonly RULE_rel_expr = 11;
	public static readonly RULE_cond_expr = 12;
	public static readonly RULE_min_max_clause = 13;
	public static readonly RULE_association = 14;
	public static readonly RULE_clauses = 15;
	public static readonly RULE_select_statement = 16;
	public static readonly RULE_parameter_annotation = 17;
	public static readonly RULE_parameter_name = 18;
	public static readonly RULE_dtype = 19;
	public static readonly RULE_data_element = 20;
	public static readonly RULE_parameter_typing = 21;
	public static readonly RULE_parameter_definition = 22;
	public static readonly RULE_parameter_list = 23;
	public static readonly RULE_view = 24;
	public static readonly RULE_cdsddl = 25;
	public static readonly RULE_annotation_value = 26;
	public static readonly RULE_subannos = 27;
	public static readonly RULE_arrelem = 28;
	public static readonly RULE_annotation_right_side = 29;
	public static readonly RULE_annotation = 30;
	public static readonly RULE_parameter = 31;
	public static readonly RULE_session_variable = 32;
	public static readonly RULE_func = 33;
	public static readonly RULE_arg = 34;
	public static readonly RULE_builtin_func = 35;
	public static readonly RULE_character_literal = 36;
	public static readonly RULE_numeric_literal = 37;
	public static readonly RULE_literal = 38;
	public static readonly RULE_case_result = 39;
	public static readonly RULE_case_when_operand = 40;
	public static readonly RULE_path_expr = 41;
	public static readonly RULE_case_operand = 42;
	public static readonly RULE_when_clause_simple = 43;
	public static readonly RULE_else_clause = 44;
	public static readonly RULE_case_expr = 45;
	public static readonly RULE_cast_expr = 46;
	public static readonly RULE_field = 47;
	public static readonly RULE_key_field = 48;
	public static readonly RULE_field_definition = 49;
	public static readonly RULE_field_rename = 50;
	public static readonly RULE_element = 51;
	public static readonly RULE_select_list = 52;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"statement", "alias", "join", "parameter_actual", "data_source_parameters", 
		"data_source", "target", "associated_view", "rel_opr", "projection", "rel_side", 
		"rel_expr", "cond_expr", "min_max_clause", "association", "clauses", "select_statement", 
		"parameter_annotation", "parameter_name", "dtype", "data_element", "parameter_typing", 
		"parameter_definition", "parameter_list", "view", "cdsddl", "annotation_value", 
		"subannos", "arrelem", "annotation_right_side", "annotation", "parameter", 
		"session_variable", "func", "arg", "builtin_func", "character_literal", 
		"numeric_literal", "literal", "case_result", "case_when_operand", "path_expr", 
		"case_operand", "when_clause_simple", "else_clause", "case_expr", "cast_expr", 
		"field", "key_field", "field_definition", "field_rename", "element", "select_list",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'('", "','", "')'", "'='", "'<>'", "'<'", "'>'", "'<='", "'>='", 
		"'$projection.'", "'['", "'0'", "'1'", "'..'", "'*'", "']'", "'{'", "'}'", 
		"'abap.char('", "'abap.clnt'", "'(3)'", "'abap.cuky(5)'", "'abap.curr('", 
		"'abap.dats'", "'(8)'", "'abap.dec('", "'abap.fltp'", "'(16,16)'", "'abap.int1'", 
		"'abap.int2'", "'(5)'", "'abap.int4'", "'(10)'", "'abap.int8'", "'(19)'", 
		"'abap.lang'", "'(1)'", "'abap.numc('", "'abap.quan('", "'abap.raw('", 
		"'abap.sstring('", "'abap.tims'", "'(6)'", "'abap.unit(3)'", "'.'", "'$parameters.'", 
		"'$session.user'", "'$session.client'", "'$session.system_language'", 
		"'$session.system_date'", "'dats_days_between'", "'DATS_DAYS_BETWEEN'", 
		"'tstmp_to_dats'", "'TSTMP_TO_DATS'", "'abap_system_timezone'", "'ABAP_SYSTEM_TIMEZONE'", 
		"'abs'", "'ABS'", "'ceil'", "'CEIL'", "'div'", "'DIV'", "'division'", 
		"'DIVISION'", "'floor'", "'FLOOR'", "'mod'", "'MOD'", "'round'", "'ROUND'", 
		"'concat'", "'CONCAT'", "'concat_with_space'", "'CONCAT_WITH_SPACE'", 
		"'instr'", "'INSTR'", "'left'", "'LEFT'", "'length'", "'LENGTH'", "'lower'", 
		"'LOWER'", "'lpad'", "'LPAD'", "'ltrim'", "'LTRIM'", "'replace'", "'REPLACE'", 
		"'right'", "'RIGHT'", "'rpad'", "'RPAD'", "'rtrim'", "'RTRIM'", "'substring'", 
		"'SUBSTRING'", "'upper'", "'UPPER'", "'bintohex'", "'BINTOHEX'", "'hextobin'", 
		"'HEXTOBIN'", "'coalesce'", "'COALESCE'", "''ULL''", "'FLTP_TO_DEC('", 
		"'3'", undefined, "'define'", "'view'", undefined, "'select'", "'from'", 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "':'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, "WS", "DEFINE", "VIEW", "AS", "SELECT", 
		"FROM", "WHERE", "GROUPBY", "HAVING", "UNION", "ALL", "BOOLEANLITERAL", 
		"KEY", "CASE", "WHEN", "THEN", "ELSE", "END", "CAST", "PRESERVING", "TYPE", 
		"DISTINCT", "TO", "WITH", "PARAMETERS", "DEFAULT", "FILTER", "ASSOCIATION", 
		"ON", "NOT", "AND", "OR", "BETWEEN", "LIKE", "ESCAPE", "IS", "NULL", "INNER", 
		"JOIN", "OUTER", "LEFT", "RIGHT", "ONE", "MANY", "CROSS", "SINGLELINECOMMENT", 
		"MULTILINECOMMENT", "NUMBER", "LEN", "DEC", "IDENTIFIER", "ANNOTATIONKEY", 
		"ENUM", "ANNOTATIONSEPERATOR", "STRING",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(ABAPCDSParser._LITERAL_NAMES, ABAPCDSParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return ABAPCDSParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "ABAPCDS.g4"; }

	// @Override
	public get ruleNames(): string[] { return ABAPCDSParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return ABAPCDSParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(ABAPCDSParser._ATN, this);
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, ABAPCDSParser.RULE_statement);
		try {
			this.state = 108;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case ABAPCDSParser.ANNOTATIONKEY:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 106;
				this.annotation();
				}
				break;
			case ABAPCDSParser.DEFINE:
			case ABAPCDSParser.VIEW:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 107;
				this.view();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public alias(): AliasContext {
		let _localctx: AliasContext = new AliasContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, ABAPCDSParser.RULE_alias);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 110;
			this.match(ABAPCDSParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public join(): JoinContext {
		let _localctx: JoinContext = new JoinContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, ABAPCDSParser.RULE_join);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 126;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case ABAPCDSParser.INNER:
			case ABAPCDSParser.JOIN:
				{
				{
				this.state = 113;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === ABAPCDSParser.INNER) {
					{
					this.state = 112;
					this.match(ABAPCDSParser.INNER);
					}
				}

				this.state = 115;
				this.match(ABAPCDSParser.JOIN);
				}
				}
				break;
			case ABAPCDSParser.LEFT:
			case ABAPCDSParser.RIGHT:
				{
				{
				this.state = 116;
				_la = this._input.LA(1);
				if (!(_la === ABAPCDSParser.LEFT || _la === ABAPCDSParser.RIGHT)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 117;
				this.match(ABAPCDSParser.OUTER);
				this.state = 121;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case ABAPCDSParser.TO:
					{
					{
					this.state = 118;
					this.match(ABAPCDSParser.TO);
					this.state = 119;
					this.match(ABAPCDSParser.ONE);
					}
					}
					break;
				case ABAPCDSParser.MANY:
					{
					this.state = 120;
					this.match(ABAPCDSParser.MANY);
					}
					break;
				case ABAPCDSParser.JOIN:
					break;
				default:
					break;
				}
				this.state = 123;
				this.match(ABAPCDSParser.JOIN);
				}
				}
				break;
			case ABAPCDSParser.CROSS:
				{
				{
				this.state = 124;
				this.match(ABAPCDSParser.CROSS);
				this.state = 125;
				this.match(ABAPCDSParser.JOIN);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 128;
			this.data_source();
			this.state = 131;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				{
				this.state = 129;
				this.match(ABAPCDSParser.ON);
				this.state = 130;
				this.cond_expr();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public parameter_actual(): Parameter_actualContext {
		let _localctx: Parameter_actualContext = new Parameter_actualContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, ABAPCDSParser.RULE_parameter_actual);
		try {
			this.state = 136;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case ABAPCDSParser.NUMBER:
			case ABAPCDSParser.STRING:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 133;
				this.literal();
				}
				break;
			case ABAPCDSParser.T__45:
			case ABAPCDSParser.ANNOTATIONSEPERATOR:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 134;
				this.parameter();
				}
				break;
			case ABAPCDSParser.T__46:
			case ABAPCDSParser.T__47:
			case ABAPCDSParser.T__48:
			case ABAPCDSParser.T__49:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 135;
				this.session_variable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public data_source_parameters(): Data_source_parametersContext {
		let _localctx: Data_source_parametersContext = new Data_source_parametersContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, ABAPCDSParser.RULE_data_source_parameters);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 138;
			this.match(ABAPCDSParser.T__0);
			this.state = 146;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 139;
					this.parameter_name();
					this.state = 140;
					this.match(ABAPCDSParser.ANNOTATIONSEPERATOR);
					this.state = 141;
					this.parameter_actual();
					this.state = 142;
					this.match(ABAPCDSParser.T__1);
					}
					}
				}
				this.state = 148;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
			}
			this.state = 149;
			this.parameter_name();
			this.state = 150;
			this.match(ABAPCDSParser.ANNOTATIONSEPERATOR);
			this.state = 151;
			this.parameter_actual();
			this.state = 152;
			this.match(ABAPCDSParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public data_source(): Data_sourceContext {
		let _localctx: Data_sourceContext = new Data_sourceContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, ABAPCDSParser.RULE_data_source);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 154;
			this.match(ABAPCDSParser.IDENTIFIER);
			this.state = 156;
			this._errHandler.sync(this);
